--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,9 @@ plugins {
     id 'application'
 }
 
+group 'com.schedulemaster.app'
+version '0.1'
+
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
@@ -20,6 +23,7 @@ dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.2'
 
+    implementation project(':misc')
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'io.github.vincenzopalazzo:material-ui-swing:1.1.2'
@@ -27,5 +31,5 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'com.schedulemaster.App'
+    mainClass = 'com.schedulemaster.app.App'
 }
