--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,8 @@ repositories {
 
 dependencies {
     // Use JUnit test framework.
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation(platform('org.junit:junit-bom:5.9.1'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
 
     implementation project(':misc')
     // This dependency is used by the application.
