--- a/server/build.gradle
+++ b/server/build.gradle
@@ -10,7 +10,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation(platform('org.junit:junit-bom:5.9.1'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
 
     implementation group: 'com.opencsv', name: 'opencsv', version: '4.6'
     implementation project(':misc')
