--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     testImplementation(platform('org.junit:junit-bom:5.9.1'))
     testImplementation('org.junit.jupiter:junit-jupiter')
 
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
     implementation project(':misc')
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.0.1-jre'
