Fix LectureTime conflict and include Change server log form

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,8 @@ application {
     mainClass = 'com.schedulemaster.app.App'
 }
 
+test {
+    useJUnitPlatform()
+}
+
 compileJava.options.encoding = 'UTF-8'
