--- a/server/build.gradle
+++ b/server/build.gradle
@@ -20,6 +20,10 @@ application {
     mainClass = 'com.schedulemaster.server.App'
 }
 
+test {
+    useJUnitPlatform()
+}
+
 run {
     standardInput = System.in
 }
