--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'io.github.vincenzopalazzo:material-ui-swing:1.1.2'
+    implementation 'com.intellij:forms_rt:7.0.3'
 }
 
 application {
