--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -2,3 +2,8 @@ title=ScheduleMaster
 default_id=User
 connection_fail=Failed to connect server.
 disconnection_fail=Failed to disconnect
+logout=Logout
+login=&Login
+id=&ID
+pw=&PW
+signup=Sign Up
