--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -11,3 +11,14 @@ error=Error
 info=Information
 succeed=Succeed!
 failed=Failed
+wrong_password=Password wrong.
+id_not_found=Cannot find ID.
+wrong_request=Wrong request.
+id_is_empty=Please fill ID field.
+id_exists=ID is already exists.
+already_enrolled=Already enrolled.
+conflict=Conflict with other lecture.
+lecture_full=This lecture is already full.
+already_selected=This lecture is already selected.
+not_enrolled=This lecture is not enrolled.
+not_selected=This lecture is not selected.
