Add session_exists message

--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -22,3 +22,4 @@ lecture_full=This lecture is already full.
 already_selected=This lecture is already selected.
 not_enrolled=This lecture is not enrolled.
 not_selected=This lecture is not selected.
+session_exists=Already have login session.
