Add lecture search

--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -23,3 +23,5 @@ already_selected=This lecture is already selected.
 not_enrolled=This lecture is not enrolled.
 not_selected=This lecture is not selected.
 session_exists=Already have login session.
+search_btn=Search
+show_all_btn=Show All
