--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -25,3 +25,5 @@ not_selected=This lecture is not selected.
 session_exists=Already have login session.
 search_btn=Search
 show_all_btn=Show All
+lecture_bag=Lecture Bag
+search=Search
