Add LectureBagForm, abstract ContentForm

--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -27,3 +27,7 @@ search_btn=Search
 show_all_btn=Show All
 lecture_bag=Lecture Bag
 search=Search
+enrolled_lecture=Enrolled Lectures
+home=Home
+enrolled=Enrolled
+wizard=Magic Wizard
