--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -35,3 +35,7 @@ unwanted_time=Unwanted Time
 select_label=Select
 group_add_btn=Add Group
 done_btn=Done
+enroll=Enroll
+select=Select
+cancel=Cancle
+unselect=Unselect
