--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -39,3 +39,8 @@ enroll=Enroll
 select=Select
 cancel=Cancle
 unselect=Unselect
+preview_label=Preview
+select_btn=Select
+next_btn=Next
+previous_btn=Previous
+no_available_schedule=There's no available schedule
