--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -44,3 +44,4 @@ select_btn=Select
 next_btn=Next
 previous_btn=Previous
 no_available_schedule=There's no available schedule
+reduplication=There is a reduplication.
