--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group 'com.schedulemaster.app'
-version '0.1'
+version '1.0'
 
 repositories {
     // Use Maven Central for resolving dependencies.
@@ -41,6 +41,18 @@ application {
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.schedulemaster.app.App'
+    }
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 compileJava.options.encoding = 'UTF-8'
