--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'com.schedulemaster.server'
-version '0.1'
+version '1.0'
 
 repositories {
     mavenCentral()
@@ -26,6 +26,18 @@ test {
 
 run {
     standardInput = System.in
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.schedulemaster.server.App'
+    }
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 compileJava.options.encoding = 'UTF-8'
