--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -52,3 +52,5 @@ suggest_check_box=Suggestion
 grade=Grade
 toggle_theme=Toggle Theme
 commit=Commit
+already_committed=Already committed.
+remove_my_rating=Remove my rating
