Group delete, Translation.

--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -3,9 +3,9 @@ default_id=User
 connection_fail=Failed to connect server.
 disconnection_fail=Failed to disconnect
 logout=Logout
-login=&Login
-id=&ID
-pw=&PW
+login=Login
+id=ID
+pw=PW
 signup=Sign Up
 error=Error
 info=Information
@@ -54,3 +54,5 @@ toggle_theme=Toggle Theme
 commit=Commit
 already_committed=Already committed.
 remove_my_rating=Remove my rating
+group=Group
+delete_group=Delete group
