--- a/app/src/main/resources/string.properties
+++ b/app/src/main/resources/string.properties
@@ -56,3 +56,16 @@ already_committed=Already committed.
 remove_my_rating=Remove my rating
 group=Group
 delete_group=Delete group
+lecture_num=Lecture Number
+score=Score
+lecture_time=Lecture Time
+room=Room
+enrolled_num=Enrolled
+max=Max
+period=Period
+mon=Monday
+tue=Tuesday
+wed=Wednesday
+thu=Thursday
+fri=Friday
+sat=Saturday
